--- a/kb/src/main/resources/application.properties
+++ b/kb/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 server.port=8081
 
 # \u589E\u52A0\u6570\u636E\u5E93\u8FDE\u63A5
-spring.datasource.url=jdbc:mysql://rm-wz9gm3ql653y1svu0do.mysql.rds.aliyuncs.com/kb?characterEncoding=UTF8&autoReconnect=true&serverTimezone=Asia/Shenzhen&allowMultiQueries=true
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://rm-wz9gm3ql653y1svu0do.mysql.rds.aliyuncs.com/kb?characterEncoding=UTF8&autoReconnect=true
 spring.datasource.username=kb
 spring.datasource.password=Wzs15014354723
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+# \u914D\u7F6Emybatis\u6240\u6709Mapper.xml\u6240\u5728\u7684\u8DEF\u5F84
+mybatis.mapper-locations=classpath:mapper/*Mapper.xml
