--- a/kb/src/main/resources/application.properties
+++ b/kb/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=8081
 
 # \u589E\u52A0\u6570\u636E\u5E93\u8FDE\u63A5
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://rm-wz9gm3ql653y1svu0do.mysql.rds.aliyuncs.com/kb?characterEncoding=UTF8&autoReconnect=true
-spring.datasource.username=kb
+spring.datasource.url=jdbc:mysql://rm-wz9gm3ql653y1svu0do.mysql.rds.aliyuncs.com/kbdev?characterEncoding=UTF8&autoReconnect=true
+spring.datasource.username=kbdev
 spring.datasource.password=Wzs15014354723
 
 # \u914D\u7F6Emybatis\u6240\u6709Mapper.xml\u6240\u5728\u7684\u8DEF\u5F84
