--- a/kb/web/package.json
+++ b/kb/web/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
-    "ant-design-vue": "^2.0.0-rc.3",
+    "ant-design-vue": "^2.2.8",
     "axios": "^0.21.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
