--- a/kb/src/main/resources/application.properties
+++ b/kb/src/main/resources/application.properties
@@ -11,3 +11,8 @@ mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 
 # \u6253\u5370\u6240\u6709\u7684sql\u65E5\u5FD7\uFF1Asql, \u53C2\u6570, \u7ED3\u679C
 logging.level.com.song.kb.mapper=trace
+
+# redis\u914D\u7F6E
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=
