11-20 阅读文档时，文档阅读数+1

--- a/kb/src/main/resources/application.properties
+++ b/kb/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.username=kbdev
 spring.datasource.password=Wzs15014354723
 
 # \u914D\u7F6Emybatis\u6240\u6709Mapper.xml\u6240\u5728\u7684\u8DEF\u5F84
-mybatis.mapper-locations=classpath:mapper/*Mapper.xml
+mybatis.mapper-locations=classpath:mapper/*Mapper*.xml
 
 # \u6253\u5370\u6240\u6709\u7684sql\u65E5\u5FD7\uFF1Asql, \u53C2\u6570, \u7ED3\u679C
 logging.level.com.song.kb.mapper=trace
