--- a/kb/pom.xml
+++ b/kb/pom.xml
@@ -29,6 +29,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
         <!--  整合redis  -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
