--- a/kb/pom.xml
+++ b/kb/pom.xml
@@ -78,6 +78,12 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.4.2</version>
         </dependency>
+        <!-- rocketmq 插件-->
+        <dependency>
+            <groupId>com.apache.rocketmq</groupId>
+            <artifactId>rocketmq-spring-boot-starter</artifactId>
+            <version>2.0.2</version>
+        </dependency>
 
     </dependencies>
 
