--- a/kb/src/main/resources/application.properties
+++ b/kb/src/main/resources/application.properties
@@ -16,3 +16,7 @@ logging.level.com.song.kb.mapper=trace
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
 spring.redis.password=
+
+# rocketmq \u914D\u7F6E
+rocketmq.name-server=127.0.0.1:9876
+rocketmq.producer.group=default
