--- a/kb/pom.xml
+++ b/kb/pom.xml
@@ -79,11 +79,11 @@
             <version>1.4.2</version>
         </dependency>
         <!-- rocketmq 插件-->
-        <dependency>
-            <groupId>com.apache.rocketmq</groupId>
-            <artifactId>rocketmq-spring-boot-starter</artifactId>
-            <version>2.0.2</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.apache.rocketmq</groupId>-->
+<!--            <artifactId>rocketmq-spring-boot-starter</artifactId>-->
+<!--            <version>2.0.2</version>-->
+<!--        </dependency>-->
 
     </dependencies>
 
