--- a/kb/src/main/resources/application.properties
+++ b/kb/src/main/resources/application.properties
@@ -18,5 +18,5 @@ spring.redis.port=6379
 spring.redis.password=
 
 # rocketmq \u914D\u7F6E
-rocketmq.name-server=127.0.0.1:9876
-rocketmq.producer.group=default
+#rocketmq.name-server=127.0.0.1:9876
+#rocketmq.producer.group=default
