12-2 增加定时任务，定时收集数据 要在XML里一次执行多个SQL的话，需要为数据库连接增加参数：&allowMultiQueries=true

--- a/kb/src/main/resources/application.properties
+++ b/kb/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8081
 
 # \u589E\u52A0\u6570\u636E\u5E93\u8FDE\u63A5
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://rm-wz9gm3ql653y1svu0do.mysql.rds.aliyuncs.com/kbdev?characterEncoding=UTF8&autoReconnect=true
+spring.datasource.url=jdbc:mysql://rm-wz9gm3ql653y1svu0do.mysql.rds.aliyuncs.com/kbdev?characterEncoding=UTF8&autoReconnect=true&allowMultiQueries=true
 spring.datasource.username=kbdev
 spring.datasource.password=Wzs15014354723
 
