13-4 增加nginx静态网站配置，和Nginx配置域名

--- a/kb/doc/deploy/server.conf
+++ b/kb/doc/deploy/server.conf
@@ -1,10 +1,9 @@
 server{
   listen 80;
-  # server_name 8.133.184.84;
-  server_name kb-server.courseimooc.com;
+  server_name kb-server.songsongsong.xyz;
 
   location / {
-    proxy_pass http://localhost:8880;
+    proxy_pass http://localhost:8081;
 
     # 针对websocket，需要增加下面的配置
     proxy_redirect off;
