--- a/kb/doc/deploy/web.conf
+++ b/kb/doc/deploy/web.conf
@@ -1,7 +1,7 @@
 server{
   listen 80;
-  # server_name 8.133.184.84;
-  server_name kb.courseimooc.com;
+   # server_name 8.142.95.104;
+   server_name kb.songsongsong.xyz;
 
   location / {
     alias /root/web/;
