--- a/kb/web/.env.prod
+++ b/kb/web/.env.prod
@@ -1,3 +1,3 @@
 NODE_ENV=production
-VUE_APP_SERVER=http://server.imooc.com
-VUE_APP_WS_SERVER=ws://server.imooc.com
+VUE_APP_SERVER=http://kb-server.songsongsong.xyz
+VUE_APP_WS_SERVER=ws://kb-server.songsongsong.xyz
